--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/FirstFragment"
-        android:name="longbowou.getnovissi.ProcessingFragment"
+        android:name="longbowou.getnovissi.fragments.ProcessingFragment"
         android:label="@string/first_fragment_label"
         tools:layout="@layout/fragment_processing">
 
@@ -18,7 +18,7 @@
 
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="longbowou.getnovissi.SecondFragment"
+        android:name="longbowou.getnovissi.fragments.SecondFragment"
         android:label="@string/second_fragment_label"
         tools:layout="@layout/fragment_second">
 
