--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -18,9 +18,9 @@
 
     <fragment
         android:id="@+id/SecondFragment"
-        android:name="longbowou.getnovissi.fragments.SecondFragment"
+        android:name="longbowou.getnovissi.fragments.NovissisFragment"
         android:label="@string/second_fragment_label"
-        tools:layout="@layout/fragment_second">
+        tools:layout="@layout/fragment_novissis">
 
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
