--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="colorPrimary">#263238</color>
     <color name="colorPrimaryDark">#4f5b62</color>
     <color name="colorAccent">#e0e0e0</color>
+    <color name="red">#d32f2f</color>
+    <color name="green">#388e3c</color>
 </resources>
