--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#e0e0e0</color>
     <color name="red">#d32f2f</color>
     <color name="green">#388e3c</color>
+    <color name="yellow">#ff8f00</color>
 </resources>
