--- a/app/src/main/res/layout/content_novissi.xml
+++ b/app/src/main/res/layout/content_novissi.xml
@@ -128,6 +128,7 @@
                 android:id="@+id/errors"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:drawableEnd="@drawable/ic_delete"
                 android:hint="Errors" />
         </com.google.android.material.textfield.TextInputLayout>
 
