--- a/app/src/main/res/layout/fragment_processing.xml
+++ b/app/src/main/res/layout/fragment_processing.xml
@@ -136,8 +136,7 @@
                 android:layout_width="200dp"
                 android:layout_height="200dp"
                 android:layout_marginTop="16dp"
-                android:src="@drawable/ic_money_bag"
-                android:tint="@color/colorPrimary"
+                android:src="@drawable/ic_automation"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
